Remove mockup data
Add connection to database

Add routes

Add rest api functionality

Update swagger json

Fix tests
