# GoRestAPI/model.go
@@ -5,22 +5,24 @@ import (
 )
 
 // Snippet from DB
-// HTTP status code 200 and repository model in data
+// HTTP status code 200 and Snippet
 // swagger:response Snippet
 type Snippet struct {
-	ID    string `json:"id"`
-	Name  string `json:"name"`
-	Lang  string `json:"lang"`
-	About string `json:"about"`
-	Code  string `json:"code"`
+	ID       string `json:"snippet_id"`
+	Owner    string `json:"owner"`
+	Title    string `json:"title"`
+	Lang     string `json:"language"`
+	Category string `json:"category"`
+	Code     string `json:"code"`
 }
 
 // User from DB
-// HTTP status code 200 and repository model in data
+// HTTP status code 200 and User
 // swagger:response User
 type User struct {
 	ID       string    `json:"user_id"`
-	Name     string    `json:"name"`
+	Mail     string    `json:"mail"`
+	Name     string    `json:"username"`
 	Password string    `json:"password"`
 	Snippets []Snippet `json:"-"`
 }
@@ -31,15 +33,72 @@ type LoginCredentials struct {
 	Password string `json:"password,omitempty" bson:"password,omitempty"`
 }
 
-func (s *Snippet) getSnippet(db *sql.DB) error {
-	return db.QueryRow("SELECT id, lang, about, code FROM Snipppets WHERE id=$1",
-		s.ID).Scan(&s.ID, &s.Lang, &s.About, &s.Code)
+func (user *User) getUser(db *sql.DB) error {
+	err := db.QueryRow("SELECT user_id, mail, username FROM users WHERE mail=$1", user.Mail).Scan(&user.ID, &user.Mail, &user.Name)
+
+	if err != nil {
+		err = user.getSnippets(db)
+	}
+
+	return err
 }
 
-func getSnippets(db *sql.DB, user User) ([]Snippet, error) {
+func (user *User) createUser(db *sql.DB) error {
+	err := db.QueryRow("INSERT INTO users (mail, username, password) VALUES ($1, $2, $3) RETURNING user_id",
+		user.Mail, user.Name, user.Password).Scan(&user.ID)
+
+	if err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (user *User) updateUser(db *sql.DB) error {
+	_, err := db.Exec("UPDATE users SET mail=$1, username=$2 WHERE user_id=$3", user.Mail, user.Name, user.ID)
+
+	return err
+}
+
+func (s *Snippet) getSnippet(db *sql.DB, userID string) error {
+	return db.QueryRow("SELECT id, language, title, code, category FROM Snipppets WHERE snippet_id=$1 AND owner=$2",
+		s.ID, userID).Scan(&s.ID, &s.Lang, &s.Title, &s.Code, &s.Category)
+}
+
+func (s *Snippet) updateSnippet(db *sql.DB) error {
+	_, err := db.Exec("UPDATE snippets SET title=$1, language=$2m, category=$3 code=$4 WHERE snippet_id=$5",
+		s.Title, s.Lang, s.Category, s.Code, s.ID)
+
+	return err
+}
+
+func (s *Snippet) createSnippet(db *sql.DB) error {
+	err := db.QueryRow("INSERT INTO snippets(owner, title, language, category, code) VALUES($1, $2, $3, $4, $5) RETURNING snippet_id",
+		s.Owner, s.Title, s.Lang, s.Category, s.Code).Scan(&s.ID)
+
+	if err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (s *Snippet) deleteSnippet(db *sql.DB) error {
+	_, err := db.Exec("DELETE FROM snippets WHERE snippet_id=$1", s.ID)
+	return err
+}
+
+func (user *User) getSnippets(db *sql.DB) error {
+	var snippets, err = getSnippets(db, user.ID)
+	user.Snippets = snippets
+
+	return err
+}
+
+func getSnippets(db *sql.DB, userID string) ([]Snippet, error) {
 	rows, err := db.Query(
-		"SELECT id, lang, about, code FROM snippets snippets WHERE user_id=$1",
-		user.ID)
+		"SELECT snippet_id, language, title, category, code FROM snippets WHERE owner=$1",
+		userID)
 
 	if err != nil {
 		return nil, err
@@ -51,7 +110,7 @@ func getSnippets(db *sql.DB, user User) ([]Snippet, error) {
 
 	for rows.Next() {
 		var s Snippet
-		if err := rows.Scan(&s.ID, &s.Lang, &s.About, &s.Code); err != nil {
+		if err := rows.Scan(&s.ID, &s.Lang, &s.Title, &s.Category, &s.Code); err != nil {
 			return nil, err
 		}
 		snippets = append(snippets, s)
